fix: harden visitor mobile access flow